Fix small spacing issues

--- a/style.css
+++ b/style.css
@@ -30,14 +30,14 @@ body {
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: center
+    align-items: center;
 }
 
 main {
     padding: 4rem 3rem;
     display: flex;
     flex-direction: column;
-    gap: 4rem;
+    gap: 2rem;
     width: 100%;
     max-width: 50rem;
 }
@@ -54,7 +54,7 @@ main {
     font-style: italic;
     color: var(--moss);
     display: block;
-    margin-left: 100px
+    margin-left: 2ch;
 }
 
 .hero-buttons {
@@ -62,6 +62,7 @@ main {
     flex-direction: row;
     align-items: center;
     gap: 1rem;
+    padding-top: 2rem;
 }
 
 .btn {
